# workpulse

./: .gitignore  README.md  pyproject.toml  workpulse.spec
.github/workflows/: windows-build.yml
docs/: design.md  windows-release.md
scripts/: build_windows.ps1
src/workpulse/: __main__.py  ai_analyzer.py  autostart.py  briefing.py  classifier.py  cli.py  daily_report.py  doctor.py  exporter.py  llm_client.py  reporter.py  settings.py  tracker.py
src/workpulse/config/: __init__.py  default_rules.yaml  default_settings.yaml
src/workpulse/platform/: base.py  macos.py  windows.py
tests/: test_ai_analyzer.py  test_autostart.py  test_briefing.py  test_classifier.py  test_daily_report.py  test_doctor.py  test_exporter.py  test_llm_client.py  test_report_html.py  test_reporter.py  test_settings.py  test_tracker.py  test_tracker_archive.py
